--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,9 +11,9 @@
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">   
           <li><a href="#">Accueil</a></li>
-          <li ><a href="#">Service</a></li>
+          <li routerLinkActive="active" ><a routerLink="main"  class="navbar-brand">Sevice</a></li>
           <li routerLinkActive="active" ><a routerLink="employee"  class="navbar-brand">Demande</a></li>
-          <li><a routerLink="auth/login"  class="navbar-brand">Contact</a></li>
+          <li routerLinkActive="active" ><a routerLink="admin"  class="navbar-brand">Contact</a></li>
         </ul>
         <a class="nav navbar-nav navbar-right"><span class="glyphicon glyphicon-earphone"></span> +221 77 334 42 54</a>
   
