--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,7 +11,7 @@
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">   
           <li><a href="#">Accueil</a></li>
-          <li routerLinkActive="active" ><a routerLink="main"  class="navbar-brand">Sevice</a></li>
+          <li routerLinkActive="active" ><a routerLink="main"  class="navbar-brand">Service</a></li>
           <li routerLinkActive="active" ><a routerLink="employee"  class="navbar-brand">Demande</a></li>
           <li routerLinkActive="active" ><a routerLink="admin"  class="navbar-brand">Contact</a></li>
         </ul>
@@ -19,7 +19,7 @@
   
         <ul class="nav navbar-nav navbar-right">
           <li routerLinkActive="active"><a routerLink="login"  class="navbar-brand"><span class="glyphicon glyphicon-user"></span>S’inscrire</a></li>
-          <li routerLinkActive="active" ><a routerLink="login"  ><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+          <li routerLinkActive="active" ><a routerLink="log"  ><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
         </ul>
       </div>
     </div>
