insertion Employee pres que terminer

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -145,6 +145,24 @@
            
     </div>
   </div>
+  <div class="panel panel-primary , col-lg-3">
+      <div class="panel-heading">Photo d'Identite:</div>
+      <div class="panel-body">
+            
+           <div class="form-group">
+                <label for="comment">Comment:</label>
+                <textarea class="form-control" rows="5" id="comment" maxlength="255"></textarea>
+           </div>
+           <div class="form-group input-group-sm">
+
+              <img src="../../../../../../image/image1.jpeg" class="img-thumbnail" alt="Cinque Terre" width="304" height="236"> 
+           </div>
+           <div class="form-group input-group-sm">
+             <input type="file"  class="form-control" />
+
+           </div>
+      </div>
+  </div>
    <!-- panell2 -->
 
    <div class="panel panel-primary , col-lg-3">
