--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -10,7 +10,6 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
 }
 
 li {
@@ -26,7 +25,7 @@ li a, .dropbtn {
 }
 
 li a:hover, .dropdown:hover .dropbtn {
-  background-color: red;
+  background-color: darkcyan;
 }
 
 li.dropdown {
