--- a/src/app/nouveau-employee/nouveau-employee.component.html
+++ b/src/app/nouveau-employee/nouveau-employee.component.html
@@ -1,12 +1,11 @@
 <app-header></app-header>
 <div class="container-fluid">
   <div class="row content">
-    <app-aside></app-aside>
-    
+   <app-sidebar></app-sidebar>    
 
     <div class="col-sm-9">
       <h4><small>RECENT POSTS</small></h4>
-      
+<app-admin></app-admin>      
     </div>
   </div>
 </div>
