--- a/src/app/demande-employee/demande-employee.component.html
+++ b/src/app/demande-employee/demande-employee.component.html
@@ -1,5 +1,5 @@
-<app-header></app-header>
-
+<!-- <app-header></app-header>
+ -->
 <div class="container" id="container">
     <form [formGroup]="newEmployee" (ngSubmit)="onSubmitform()">            <!-- information personnelle -->
 
