--- a/src/app/statistique/statistique.component.html
+++ b/src/app/statistique/statistique.component.html
@@ -1,11 +1,10 @@
 <app-header></app-header>
 <div class="container-fluid">
   <div class="row content">
-    <app-aside></app-aside>
-    
+<app-sidebar></app-sidebar>    
 
     <div class="col-sm-9">
-      <h4><small>RECENT POSTS</small></h4>
+      <h4><small>Mes rapport</small></h4>
       
     </div>
   </div>
