--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,245 @@
-<p>
-  footer works!
-</p>
+<form [formGroup]="nestedForm" (ngSubmit)="submithandle()">
+
+    <!-- panell -->
+  
+    <div class="panel panel-primary , col-lg-3">
+        <!-- Default panel contents -->
+                 <div class="panel-heading">Informations Employé</div>
+                      <div class="panel-body">
+  
+          <!-- pour prenom -->
+            <div class="form-group input-group-sm">
+               <label for="pretext">Prenom</label>
+                <input type="text" formControlName="prenom" [ngClass]="{'form-control':true,
+                'is-invalid':prenom.invalid && prenom.touched,
+                  'is-valid':prenom.valid}" id="pretext" placeholder="Entrer Prenom">
+           </div>
+           <!-- pour nom -->
+           <div class="form-group input-group-sm">
+              <label for="nomtext">nom</label>
+               <input type="text" formControlName="nom" [ngClass]="{'form-control':true,
+               'is-invalid':nom.invalid && prenom.touched,
+                 'is-valid':nom.valid}" id="nomtext" placeholder="Entrer nom">
+          </div>
+  
+          <!-- pour adress -->
+          <div class="form-group input-group-sm">
+              <label for="addtext">Adresse</label>
+               <input type="text" formControlName="adresse" [ngClass]="{'form-control':true,
+               'is-invalid':adresse.invalid && adresse.touched,
+                 'is-valid':adresse.valid}" id="addtext" placeholder="Entrer adresse">
+          </div>
+             
+          <!-- pour DateNaissance -->
+          <div class="form-group input-group-sm">
+              <label for="datetext">Date de Naissance</label>
+               <input type="date" formControlName="dateNaissance" [ngClass]="{'form-control':true,
+               'is-invalid':dateNaissance.invalid && dateNaissance.touched,
+                 'is-valid':dateNaissance.valid}" id="datetext" placeholder="Entrer dateNaissance">
+          </div>
+          <!-- pour telephoneFixe -->
+          <div class="form-group input-group-sm">
+              <label for="fixetext">Téléphone Fixe</label>
+               <input type="number" formControlName="telephoneFixe" [ngClass]="{'form-control':true,
+               'is-invalid':telephoneFixe.invalid && telephoneFixe.touched,
+                 'is-valid':telephoneFixe.valid}" id="fixetext" placeholder="Entrer Telephone Fixe">
+          </div>
+          <!-- pour telephoneMobile -->
+          <div class="form-group input-group-sm">
+              <label for="mobiletext">Téléphone Mobile</label>
+               <input type="number" formControlName="telephoneMobile" [ngClass]="{'form-control':true,
+               'is-invalid':telephoneMobile.invalid && telephoneMobile.touched,
+                 'is-valid':telephoneMobile.valid}" id="mobiletext" placeholder="Entrer TelephoneMobile">
+          </div>
+          <!-- pour Email -->
+          <div class="form-group input-group-sm">
+              <label for="emailtext">Email</label>
+               <input type="email" formControlName="email" [ngClass]="{'form-control':true,
+               'is-invalid':email.invalid && email.touched,
+                 'is-valid':email.valid}" id="emailtext" placeholder="Entrer Email">
+          </div>
+  <!-- fin 1er panel info -->
+          
+         </div>
+     </div>
+      <!-- panell2 -->
+  
+    <div class="panel panel-primary , col-lg-3">
+        <!-- Default panel contents -->
+                 <div class="panel-heading">Informations Employé:</div>
+                      <div class="panel-body">
+             <!-- pour pays  -->
+             <div class="form-group input-group-sm">
+                <label for="pay">Nationalité:</label>
+                <select id="pay" class="form-control"  formControlName="pay" >
+                    <option  *ngFor="let nom of paysliste" value="{{nom}}">{{nom}}</option>
+                    
+                </select>
+            </div>
+             <!-- pour typeIdentification  -->
+             <div class="form-group input-group-sm">
+                <label for="typeidentification">Type Identification:</label>
+                <select id="typeidentification" class="form-control"  formControlName="typeidentification" >
+                    <option  *ngFor="let nom of identificationListe" value="{{nom}}">{{nom}}</option>
+                    
+                </select>
+            </div>
+            <!-- pour identification -->
+            <div class="form-group input-group-sm">
+                <label for="identification">N° d'Identification</label>
+               <input type="number" formControlName="identification" [ngClass]="{'form-control':true,
+               'is-invalid':identification.invalid && identification.touched,
+                 'is-valid':identification.valid}" id="identification" placeholder="Entrer Identification">
+          </div>
+  
+           <!-- pour Locilté  -->
+           <div class="form-group input-group-sm">
+              <label for="Localte">Localité:</label>
+              <select id="Localte" class="form-control"  formControlName="localite" >
+                  <option  *ngFor="let nom of localiteListe" value="{{nom}}">{{nom}}</option>
+                  
+              </select>
+          </div>
+           <!-- pour Ethnies  -->
+           <div class="form-group input-group-sm">
+              <label for="ethnies">Ethnie :</label>
+              <select id="ethnies" class="form-control"  formControlName="ethnies" >
+                  <option  *ngFor="let nom of ethniesListe" value="{{nom}}">{{nom}}</option>
+              </select>
+          </div>
+           <!-- Multiple Radios (inline) -->
+           <div class="form-group input-group-sm">
+              <label class="col-md-4 control-label" for="religion" >Religion</label>
+             <div class="col-md-2">
+                
+              <div class="radio" checked >
+                <label><input type="radio" checked="true"  name="religion" id="radios-0" value="Musulmane" checked="checked" formControlName="religion">Musulmane</label>
+              </div>
+              <div class="radio">
+                <label><input type="radio" name="religion" id="radios-1" formControlName="religion" value="Chretienne">Chrétienne</label>
+              </div>
+  
+             </div>
+           </div>  
+           <!-- for situation matrimoniale  -->            
+           <div class="form-group input-group-sm"> 
+            <label for="situationMatrimoniale">Situation Matrimoniale</label>
+             <select id="situationMatrimoniale" class="form-control" formControlName="situationMatrimoniale">
+               <option value="Celibataire">Celibataire</option>
+               <option value="Mariee">Mariee</option>
+               <option value="Divorcee">Divorcee</option>
+               <option value="Veuve">Veuve</option>
+               </select>
+               </div>
+  <!-- langue -->
+         <!-- <div class="form-group input-group-sm">
+                 <div>
+                 <label for="" class="form-label">langues</label>
+                </div>
+                   <div class="form-check form-check-inline" *ngFor="let control of langueArray.controls; let i=index;">
+                      <input class="form-check-input" [formControl]="control" (change)="getselectedLanguevalues()" type="checkbox" id="inlineCkeckbox{{i}}" value="option">
+                      <label class="form-check-label " for="inlineCkeckbox{{i}}">{{tableauLangue[i]}}</label>
+                    </div>
+                    <small id="erer" style="color: brown" *ngIf="favLangueErreur && checkLangueTouched()" class="form-text custom invalid-feedback">Veillez  cochez une Case</small>
+             </div> -->
+             
+      </div>
+    </div>
+    
+     <!-- panell2 -->
+  
+     <div class="panel panel-primary , col-lg-3">
+        <!-- Default panel contents -->
+                 <div class="panel-heading">Informations Employé:</div>
+                      <div class="panel-body">
+                         <!-- pour Niveau Etude -->
+            <div class="form-group input-group-sm">
+                <label for="niveauetude">Niveau d'Etudes</label>
+                <select id="niveauetude" class="form-control"  formControlName="niveauetude" >
+                    <option  *ngFor="let nom of niveauetudeliste" value="{{nom}}">{{nom}}</option>
+                    
+                </select>
+            </div>
+  <!-- Competence -->
+             <div class="form-group input-group-sm">
+                <label for="langues" class="form-label">Competences:</label>
+     
+               <div class="col-xs-14">
+                 <div class="well" style="max-height: 110px;overflow: auto;">
+   
+                   <div class="list-group checked-list-box" *ngFor="let control of competenceArray.controls; let i=index;">
+                       <!-- <label class="checkbox-inline" *ngFor="let description of competenceListe">
+                         <input class="form-control" type="checkbox" value="" formControlName="competence" name="competence">{{description}}</label> -->
+                         <input class="form-check-input" [formControl]="control" (change)="getselectedCompetencevalues()" type="checkbox" id="inlineCkeckbox{{i}}" value="option">
+                         <label class="form-check-label " for="inlineCkeckbox{{i}}">{{tableauCompetence[i]}}</label>
+                    </div>
+  
+                  </div>
+                  </div>
+                  <small id="erer" style="color: brown" *ngIf="favCompetenceErreur" class="form-text custom invalid-feedback">Veillez  cochez au moins une Competence</small>
+               </div>
+               
+              <!-- Langues -->
+               <!-- Langues -->
+            <div class="form-group input-group-sm">
+                <label for="langues" class="form-label">Langues Parlées:</label>   
+               <div class="col-xs-14">
+                 <div class="well" style="max-height: 110px;overflow: auto;">
+    
+                   <div class="list-group checked-list-box" *ngFor="let control of langueArray.controls; let i=index;">
+                       <!-- <label class="checkbox-inline" *ngFor="let description of competenceListe">
+                         <input class="form-control" type="checkbox" value="" formControlName="competence" name="competence">{{description}}</label> -->
+                         <input class="form-check-input" [formControl]="control" (change)="getselectedLanguevalues()" type="checkbox" id="inlineCkeckbox{{i}}" value="option">
+                         <label class="form-check-label " for="inlineCkeckbox{{i}}">{{tableauLangue[i]}}</label>
+                    </div>
+    
+                  </div>
+                  </div>
+                  <small id="erer" style="color: brown" *ngIf="favLangueErreur" class="form-text custom invalid-feedback">Veillez  cochez au moins  une Langue</small>
+    
+    
+               </div>
+              
+  
+                <!-- <div class="form-group input-group-sm">
+                 <div>
+                 <label for="" class="form-label">langues</label>
+                </div>
+                   <div class="form-check form-check-inline" *ngFor="let control of langueArray.controls; let i=index;">
+                      <input class="form-check-input" [formControl]="control" (change)="getselectedLanguevalues()" type="checkbox" id="inlineCkeckbox{{i}}" value="option">
+                      <label class="form-check-label " for="inlineCkeckbox{{i}}">{{tableauLangue[i]}}</label>
+                    </div>
+                    <small id="erer" style="color: brown" *ngIf="favLangueErreur && checkLangueTouched()" class="form-text custom invalid-feedback">Veillez  cochez une Case</small>
+             </div> -->
+          </div>
+     </div>
+     <!-- photo -->
+  <div class="panel panel-primary , col-lg-3">
+      <div class="panel-heading">Photo d'Identite:</div>
+      <div class="panel-body">
+            
+           <div class="form-group">
+                <label for="comment">Comment:</label>
+                <textarea class="form-control" rows="5" id="comment" maxlength="255"></textarea>
+           </div>
+          <!--  <div class="form-group input-group-sm">
+  
+              <img src="../../../../../../image/image1.jpeg" class="img-thumbnail" alt="Cinque Terre" width="304" height="236"> 
+           </div> -->
+           <div class="form-group input-group-sm">
+             <input type="file"  class="form-control" />
+  
+           </div>
+                  <button class="btn btn-primary" type="submit">Valider</button>
+            </div>
+       </div>
+  </form>
+  
+  
+  
+  
+  
+  
+  
+  
+  
