conflit sur admin resolue

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -144,8 +144,7 @@
            </div> -->
            
     </div>
-  </div>
-<<<<<<< HEAD
+ <!-- </div>
   <div class="panel panel-primary , col-lg-3">
       <div class="panel-heading">Photo d'Identite:</div>
       <div class="panel-body">
@@ -164,9 +163,8 @@
            </div>
       </div>
   </div>
-=======
+-->
   
->>>>>>> e83625d9dda3896d32aec19264d37f72c8c4ff0b
    <!-- panell2 -->
 
    <div class="panel panel-primary , col-lg-3">
@@ -235,25 +233,24 @@
         </div>
    </div>
    <!-- photo -->
-<div class="panel panel-primary , col-lg-3">
-    <div class="panel-heading">Photo d'Identite:</div>
-    <div class="panel-body">
+   <div class="panel panel-primary , col-lg-3">
+     <div class="panel-heading">Photo d'Identite:</div>
+     <div class="panel-body">
           
          <div class="form-group">
               <label for="comment">Comment:</label>
-              <textarea class="form-control" rows="5" id="comment" maxlength="255"></textarea>
+              <textarea class="form-control" rows="5" id="comment" maxlength="255" formControlName="observation"></textarea>
          </div>
-        <!--  <div class="form-group input-group-sm">
+         <div class="form-group input-group-sm">
 
             <img src="../../../../../../image/image1.jpeg" class="img-thumbnail" alt="Cinque Terre" width="304" height="236"> 
-         </div> -->
+         </div>
          <div class="form-group input-group-sm">
-           <input type="file"  class="form-control" />
+           <input type="file" (change)="selectFile($event)" class="form-control" />
 
          </div>
-                <button class="btn btn-primary" type="submit">Valider</button>
-          </div>
-     </div>
+    </div>
+</div>
 </form>
 
 
