--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -1,6 +1,9 @@
 body {
     /*   background-image:  url('http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg');
-     */  background-image: url('/../assets/images/pom.jpeg');
+      background-image: url('/../assets/images/pom.jpeg');*/
+
+      background: url('/../assets/images/na.jpg') no-repeat center center;
+      background-size: cover;
     
     
       height: 110vh;
