--- a/src/app/liste-employe/liste-employe.component.html
+++ b/src/app/liste-employe/liste-employe.component.html
@@ -35,6 +35,8 @@
             <td class="table-primary"><span class="glyphicon glyphicon-bars
               ">{{employee.prenom}}</span></td>
             <td>{{employee.nom}}</td>
+            <td>{{employee.adresse}}</td>
+
         
             <td><button type="submit" class="btn btn-danger" (click)='deleteEmploye(employee)' ><span class="glyphicon glyphicon-trash"></span></button></td>
             <td><button type="submit" class="btn btn-primary" (click)='editeEmploye(employee)'><span class="glyphicon glyphicon-pencil"></span></button></td>
