--- a/src/app/recherche/recherche.component.html
+++ b/src/app/recherche/recherche.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-head-admin></app-head-admin>
 <button  (click)="showHideSideBar =!showHideSideBar;" >Menu<span class="glyphicon glyphicon-bars"></span></button>
 
 <div class="row">
