--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,67 +1,285 @@
-<app-header></app-header>
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-      </ol>
-  
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <img src="../assets/images/na.jpg" alt="Image" style="width:100%;">
-          <div class="carousel-caption">
-            <h3>Sell $</h3>
-            <p>Money Money.</p>
-          </div>      
-        </div>
-  
-        <div class="item">
-          <img src="../assets/images/ma.jpg" alt="Image">
-          <div class="carousel-caption">
-            <h3>Sen Menegere $</h3>
-            <p>Lorem ipsum...</p>
-          </div>      
-        </div>
-      </div>
-  
-      <!-- Left and right controls -->
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-  </div>
+
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
+<script src="//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
+<body>
+ 
+  <app-navbar></app-navbar>
+
     
-  <div class="container text-center">    
-    <h3>What We Do</h3><br>
-    <div class="row">
-      <div class="col-sm-4">
-        <img src="../assets/images/map.jpg" class="img-responsive" style="width:100%" alt="Image">
+    <app-homed></app-homed>
 
-       
+<!-- section1 -->
+<app-section1></app-section1>
+
+    
+    <section class="testimonials text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 mx-auto wow fadeInUp">
+                    <h3 class="text-center font-weight-bold">JOIN MOJO<span class="bg-main">AVE</span> GROUPS</h3>
+                    <p class=" text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 col-md-4 col-lg-3 mt-4 wow bounceInUp" data-wow-duration="1.4s">
+                    <div class="card">
+                        <img class="card-img-top" src="https://images.pexels.com/photos/258732/pexels-photo-258732.jpeg?auto=compress&cs=tinysrgb&h=650&w=940">
+                        <div class="card-block">
+
+                            <h4 class="card-title text-center">CATHERINA GAIL</h4>
+
+                            <div class="card-text text-center">
+                                <div class="social-icons">
+                                    <a href="#" class="btn btn-circle my-social-btn fb"><i class="fa fa-facebook"></i></a>
+                                    <a href="#" class="btn btn-circle my-social-btn twitter"><i class="fa fa-twitter"></i></a>
+                                    <a href="#" class="btn btn-circle my-social-btn google"><i class="fa fa-google"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-footer text-center">
+                            <small>Lorem Ipsum is simply dummy text of the printing and typesetting</small>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3 mt-4 wow bounceInUp" data-wow-duration="1.4s">
+                    <div class="card">
+                        <img class="card-img-top" src="https://images.pexels.com/photos/210922/pexels-photo-210922.jpeg?auto=compress&cs=tinysrgb&h=650&w=940">
+                        <div class="card-block">
+
+                            <h4 class="card-title text-center">HARVEY RUBE</h4>
+
+                            <div class="card-text text-center">
+                                <div class="social-icons">
+                                    <a href="#" class="btn btn-circle my-social-btn fb"><i class="fa fa-facebook"></i></a>
+                                    <a href="#" class="btn btn-circle my-social-btn twitter"><i class="fa fa-twitter"></i></a>
+                                    <a href="#" class="btn btn-circle my-social-btn google"><i class="fa fa-google"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-footer text-center">
+                            <small>Lorem Ipsum is simply dummy text of the printing and typesetting</small>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3 mt-4 wow bounceInUp" data-wow-duration="1.4s">
+                    <div class="card">
+                        <img class="card-img-top" src="https://images.pexels.com/photos/756242/pexels-photo-756242.jpeg?auto=compress&cs=tinysrgb&h=650&w=940">
+                        <div class="card-block">
+
+                            <h4 class="card-title text-center">JANET PRIS</h4>
+
+                            <div class="card-text text-center">
+                                <div class="social-icons">
+                                    <a href="#" class="btn btn-circle my-social-btn fb"><i class="fa fa-facebook"></i></a>
+                                    <a href="#" class="btn btn-circle my-social-btn twitter"><i class="fa fa-twitter"></i></a>
+                                    <a href="#" class="btn btn-circle my-social-btn google"><i class="fa fa-google"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-footer text-center">
+                            <small>Lorem Ipsum is simply dummy text of the printing and typesetting</small>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-3 mt-4 wow bounceInUp" data-wow-duration="1.4s">
+                    <div class="card">
+                        <img class="card-img-top" src="https://images.pexels.com/photos/167445/pexels-photo-167445.jpeg?auto=compress&cs=tinysrgb&h=650&w=940">
+                        <div class="card-block">
+
+                            <h4 class="card-title text-center">KEVIN WARD</h4>
+
+                            <div class="card-text text-center">
+                                <div class="social-icons">
+                                    <a href="#" class="btn btn-circle my-social-btn fb"><i class="fa fa-facebook"></i></a>
+                                    <a href="#" class="btn btn-circle my-social-btn twitter"><i class="fa fa-twitter"></i></a>
+                                    <a href="#" class="btn btn-circle my-social-btn google"><i class="fa fa-google"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-footer text-center">
+                            <small>Lorem Ipsum is simply dummy text of the printing and typesetting</small>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="testimonials bg-light" id="marketplace">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 mx-auto wow fadeInUp">
+                    <h3 class="text-center font-weight-bold">MOJO<span class="bg-main">AVE</span> MARKET PLACE</h3>
+                    <p class=" text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 col-md-4 col-lg-4 mt-4 wow bounceInUp" data-wow-duration="1.4s">
+                    <div class="card">
+                        <img class="card-img-top h-262" src="https://images.pexels.com/photos/449627/pexels-photo-449627.jpeg?auto=compress&cs=tinysrgb&h=650&w=940">
+                        <div class="card-block">
+
+                            <h4 class="card-title">Lorem Ipsum Dolor Site Amet</h4>
+
+                            <div class="card-text">
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's.</p>
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <small>$ 170</small>
+                            <a href="#" class="pull-right">More Info</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-4 mt-4 wow bounceInUp" data-wow-duration="1.4s">
+                    <div class="card">
+                        <img class="card-img-top h-262" src="https://images.pexels.com/photos/56005/fiji-beach-sand-palm-trees-56005.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940">
+                        <div class="card-block">
+
+                            <h4 class="card-title">Lorem Ipsum Dolor Site Amet</h4>
+
+                            <div class="card-text">
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's.</p>
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <small>$ 170</small>
+                            <a href="#" class="pull-right">More Info</a>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-4 col-lg-4 mt-4 wow bounceInUp" data-wow-duration="1.4s">
+                    <div class="card">
+                        <img class="card-img-top h-262" src="https://images.pexels.com/photos/753626/pexels-photo-753626.jpeg?auto=compress&cs=tinysrgb&h=650&w=940">
+                        <div class="card-block">
+
+                            <h4 class="card-title ">Lorem Ipsum Dolor Site Amet</h4>
+
+                            <div class="card-text ">
+                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's.</p>
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <small>$ 170</small>
+                            <a href="#" class="pull-right">More Info</a>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="testimonials text-center ">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 mx-auto wow fadeInUp">
+                    <h3 class="text-center font-weight-bold">MOJO<span class="bg-main">AVE</span> FEATURED ARTIST</h3>
+                    <p class=" text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 col-md-4 col-lg-6 mt-4 wow bounceInUp" data-wow-duration="1.4s">
+                    <div class="big-img-3">
+                        <img src="https://images.pexels.com/photos/167480/pexels-photo-167480.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-lg-6 mt-4">
+                    <div class="my-right-text wow fadeInUp">
+
+                        <p class="text-justify font-italic">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets. remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown.</p>
+
+                        <a href="#" class="link-color">Michael U</a>
+                        <p class="text-muted">Lorem Ipsum Dolor Sit Amet</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+<!-- footer -->
+   <app-footer></app-footer>
+    
+     <script>
+              new WOW().init();
+              </script>
+    <script>
+        $(window).scroll( function(){
+
+ 
+          var topWindow = $(window).scrollTop();
+          var topWindow = topWindow * 1.5;
+          var windowHeight = $(window).height();
+          var position = topWindow / windowHeight;
+          position = 1 - position;
         
+          $('#bottom').css('opacity', position);
+        
+        });
 
-        <p>Current Project</p>
-      </div>
-      <div class="col-sm-4"> 
-        <img src="../assets/images/ma.jpg" class="img-responsive" style="width:100%" alt="Image">
-        <p>Project 2</p>    
-      </div>
-      <div class="col-sm-4">
-        <div class="well">
-         <p>Some text..</p>
-        </div>
-        <div class="well">
-         <p>Some text..</p>
-        </div>
-      </div>
-    </div>
-  </div><br>
-  
-  <footer class="container-fluid text-center">
-    <p>Footer Text</p>
-  </footer>
+        function openNav() {
+            document.getElementById("mySidenav").style.width = "250px";
+            document.getElementById("main").style.display = "0";
+            document.body.style.backgroundColor = "white";
+        }
+
+        function closeNav() {
+            document.getElementById("mySidenav").style.width = "0";
+            document.getElementById("main").style.marginRight= "0";
+            document.body.style.backgroundColor = "white";
+        }
+
+ 
+     $(window).on("scroll", function() {
+            if ($(this).scrollTop() > 10) {
+                $("nav.navbar").addClass("mybg-dark");
+                $("nav.navbar").addClass("navbar-shrink");
+              
+
+            } else {
+                $("nav.navbar").removeClass("mybg-dark");
+                $("nav.navbar").removeClass("navbar-shrink");
+               
+            }
+            
+      
+
+        });
+        
+        $(function() {
+  $('#bottom').click(function() {
+    if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+      var target = $(this.hash);
+      target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+      if (target.length) {
+        $('html,body').animate({
+          scrollTop: target.offset().top
+        }, 500);
+        return false;
+      }
+    }
+  });
+});
+
+
+</script>
+<script>
+    $(document).ready(function(){
+      $(".fancybox").fancybox({
+            openEffect: "none",
+            closeEffect: "none"
+        });
+    });
+</script>
+    </body>
