--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -13,6 +13,6 @@
   }
 
   li a:hover, .dropdown:hover .dropbtn {
-    background-color: rgb(21, 131, 131);
+    background-color:dodgerblue;
   }
   
