--- a/src/app/section1/section1.component.html
+++ b/src/app/section1/section1.component.html
@@ -8,7 +8,7 @@
             </div>
             <div class="col-md-8">
                 <div class="inner-section wow fadeInUp">
-                    <h3>Demande de soumission<span class="bg-main"> pour le service ménager</span></h3>
+                    <h3> prestation de nettoyage <span class="bg-main"> professionnelle.</span></h3>
                     <br/><br/>
                     <div class="linear-grid">
                         <div class="row">
