--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -13,7 +13,7 @@
  </div>
  <div class="col-md-4 mb-3">
     <label for="localite">Localité</label>
-    <select id="localite" class="form-control" formControlName="localite" required>
+    <select id="localite" class="form-control" formControlName="localite" >
         <option  *ngFor="let nom of localiteListe" value="{{nom}}">{{nom}}</option>
         </select>
  <div class="valid-tooltip"> 
@@ -33,7 +33,7 @@
 </div>
 <div class="col-md-4 mb-3">
      <label for="typeidentification">Type Identification</label>
-     <select id="typeidentification" class="form-control"  formControlName="typeidentification" required placeholder="typeidentification">
+     <select id="typeidentification" class="form-control"  formControlName="typeidentification"  placeholder="typeidentification">
           <option  *ngFor="let nom of identificationListe" value="{{nom}}">{{nom}}</option>
     </select>
     <div class="valid-tooltip"> 
@@ -68,7 +68,7 @@
 </div>
 <div class="form-group col-md-4">
       <label for="pay">Pays</label>
-      <select id="pay" class="form-control" required formControlName="pay">
+      <select id="pay" class="form-control"  formControlName="pay">
           <option  *ngFor="let nom of paysliste" value="{{nom}}">{{nom}}</option>
       </select>
       <div class="valid-tooltip"> 
